--- a/app/contact.html
+++ b/app/contact.html
@@ -38,6 +38,10 @@
             </ul>
           </nav>
 
+          <button class="header__btn-menu">
+            <span></span><span></span><span></span>
+          </button>
+
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="menu icon" />
           </button>
