--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,10 @@
             </ul>
           </nav>
 
+          <button class="header__btn-menu">
+            <span></span><span></span><span></span>
+          </button>
+
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="menu icon" />
           </button>
@@ -300,15 +304,15 @@
 
               <div class="blog-box__items">
                 <div class="blog-box__item">
-                  <a class="blog-box__item-link" href="blog-page.html">
+                  <a class="blog-box__item-link" href="blog-post.html">
                     <img class="blog-box__item-img" src="images/blog/01.jpg" alt="images">
                   </a>
                   <div class="blog-box__links">   
                     <span class="blog-box__date">March 12, 2020</span> |
-                    <a class="blog-box__author" href="blog-page.html">by Ann Summers</a> | 
-                    <a class="blog-box__theme" href="blog-page.html">Inrerior</a>
+                    <a class="blog-box__author" href="blog-post.html">by Ann Summers</a> | 
+                    <a class="blog-box__theme" href="blog-post.html">Inrerior</a>
                   </div>
-                  <a class="blog-box__item-link" href="blog-page.html">
+                  <a class="blog-box__item-link" href="blog-post.html">
                     <h4 class="blog-box__item-title">
                       Listicle actually selvage activated charcoal for the drinking vinegar
                     </h4>
@@ -316,15 +320,15 @@
                 </div>
                    
                 <div class="blog-box__item">
-                  <a class="blog-box__item-link" href="blog-page.html">
+                  <a class="blog-box__item-link" href="blog-post.html">
                     <img class="blog-box__item-img" src="images/blog/02.jpg" alt="images">
                   </a>
                   <div class="blog-box__links">
                     <span class="blog-box__date"> September 28,2020</span> |
-                    <a class="blog-box__author" href="blog-page.html">by Finnagan Morningstar</a> |
-                    <a class="blog-box__theme" href="blog-page.html">Dining room interior</a>
+                    <a class="blog-box__author" href="blog-post.html">by Finnagan Morningstar</a> |
+                    <a class="blog-box__theme" href="blog-post.html">Dining room interior</a>
                   </div>
-                  <a href="blog-page.html">
+                  <a href="blog-post.html">
                     <h4 class="blog-box__item-title">
                       Red selfies edison bulb four dollar toast humblebrag
                     </h4>
