--- a/app/blog-post.html
+++ b/app/blog-post.html
@@ -23,7 +23,7 @@
             </ul>
           </nav>
 
-          <a class="logo" href="/">
+          <a class="logo" href="index.html">
             <img src="images/logo.png" alt="DESIRE logo" />
           </a>
 
@@ -51,7 +51,7 @@
               <img src="images/close.svg" alt="close icon" />
             </button>
             <div class="rightside-menu__content">
-              <a class="rightside-menu__logo" href="/">
+              <a class="rightside-menu__logo" href="index.html">
                 <img src="images/logo-big.png" alt="DESIRE logo" />
               </a>
               <h4 class="rightside-menu__title">Furniture for life</h4>
@@ -76,7 +76,7 @@
           <div class="container">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="/">Home</a>
+                <a class="breadcrumbs__link" href="index.html">Home</a>
               </li>
               <li class="breadcrumbs__item">
                 <a class="breadcrumbs__link" href="blog.html">Blog</a>
